<resources>
    <string name="app_name">Humania</string>
    <string name="good_morning">Good Morning,</string>
    <string name="user_name_default">Juan Dela Cruz</string>
    <string name="stat_donated">DONATED</string>
    <string name="stat_rating">RATING</string>
    <string name="default_avatar_emoji">👨</string>
    <string name="chip_all">All</string>
    <string name="chip_food">🥦 Food</string>
    <string name="chip_clothes">👕 Clothes</string>
    <string name="chip_items">📦 Items</string>
    <string name="chip_toys">🧸 Toys</string>
    <string name="chip_electronics">📱 Electronics</string>
    <string name="chip_tools">🛠️ Tools</string>
    <string name="chip_other">🎁 Other</string>
    <string name="near_you">Near You</string>
    <string name="see_all">See All</string>
    <string name="tagline">GIVE. RECEIVE. CONNECT.</string>
    <string name="get_started">GET STARTED</string>
</resources>
